# facebook-marketplace-rss

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json  config.sample.json  docker-compose.yml  entrypoint.sh  fb_ad_monitor.py  pyproject.toml
config/: config.json
static/js/: edit_config.js
templates/: edit_config.html
