[project]
name = "facebook-marketplace-rss"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.2",
    "playwright>=1.58.0",
    "pyrss2gen>=1.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "tzlocal>=5.3.1",
]
